packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_error_snapshots/invalid_property_delimiter.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\t# Delimiter should have spaces.\n\tpkgver=1.0.0\n\tpkgrel = 1\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 3, column 8
  |
3 |  pkgver=1.0.0
  |        ^
invalid delimiter
expected an equal sign surrounded by spaces: ' = '.
